external-crates/move/crates/move-compiler/tests/move_2024/borrows/borrow_edge_overflow_tmp.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_2024/borrows/borrow_edge_overflow_tmp.move:17:5
   │
15 │     if (test) x = &j;
   │                   -- It is still being borrowed by this reference
16 │     if (test) x = &k;
17 │     test && test;
   │     ^^^^^^^^^^^^ Invalid assignment of temporary variable

error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_2024/borrows/borrow_edge_overflow_tmp.move:17:5
   │
15 │     if (test) x = &j;
   │                   -- It is still being borrowed by this reference
16 │     if (test) x = &k;
17 │     test && test;
   │     ^^^^^^^^^^^^ Invalid move of temporary variable

error[E07006]: ambiguous usage of variable
   ┌─ tests/move_2024/borrows/borrow_edge_overflow_tmp.move:17:13
   │
15 │     if (test) x = &j;
   │                   -- It is still being borrowed by this reference
16 │     if (test) x = &k;
17 │     test && test;
   │             ^^^^
   │             │
   │             Ambiguous usage of variable 'test'
   │             Try an explicit annotation, e.g. 'move test' or 'copy test'
   │
   = Ambiguous inference of 'move' or 'copy' for a borrowed variable's last usage: A 'move' would invalidate the borrowing reference, but a 'copy' might not be the expected implicit behavior since this the last direct usage of the variable.

error[E07004]: invalid return of locally borrowed state
   ┌─ tests/move_2024/borrows/borrow_edge_overflow_tmp.move:18:5
   │
15 │     if (test) x = &j;
   │                   -- It is still being borrowed by this reference
   ·
18 │     x
   │     ^ Invalid return. Local value is still being borrowed.

error[E07004]: invalid return of locally borrowed state
   ┌─ tests/move_2024/borrows/borrow_edge_overflow_tmp.move:18:5
   │
15 │     if (test) x = &j;
   │                   -- It is still being borrowed by this reference
   ·
18 │     x
   │     ^ Invalid return. Local variable 'a' is still being borrowed.

error[E07004]: invalid return of locally borrowed state
   ┌─ tests/move_2024/borrows/borrow_edge_overflow_tmp.move:18:5
   │
15 │     if (test) x = &j;
   │                   -- It is still being borrowed by this reference
   ·
18 │     x
   │     ^ Invalid return. Local variable 'b' is still being borrowed.

error[E07004]: invalid return of locally borrowed state
   ┌─ tests/move_2024/borrows/borrow_edge_overflow_tmp.move:18:5
   │
15 │     if (test) x = &j;
   │                   -- It is still being borrowed by this reference
   ·
18 │     x
   │     ^ Invalid return. Local variable 'c' is still being borrowed.

error[E07004]: invalid return of locally borrowed state
   ┌─ tests/move_2024/borrows/borrow_edge_overflow_tmp.move:18:5
   │
15 │     if (test) x = &j;
   │                   -- It is still being borrowed by this reference
   ·
18 │     x
   │     ^ Invalid return. Local variable 'd' is still being borrowed.

error[E07004]: invalid return of locally borrowed state
   ┌─ tests/move_2024/borrows/borrow_edge_overflow_tmp.move:18:5
   │
15 │     if (test) x = &j;
   │                   -- It is still being borrowed by this reference
   ·
18 │     x
   │     ^ Invalid return. Local variable 'e' is still being borrowed.

error[E07004]: invalid return of locally borrowed state
   ┌─ tests/move_2024/borrows/borrow_edge_overflow_tmp.move:18:5
   │
15 │     if (test) x = &j;
   │                   -- It is still being borrowed by this reference
   ·
18 │     x
   │     ^ Invalid return. Local variable 'f' is still being borrowed.

error[E07004]: invalid return of locally borrowed state
   ┌─ tests/move_2024/borrows/borrow_edge_overflow_tmp.move:18:5
   │
15 │     if (test) x = &j;
   │                   -- It is still being borrowed by this reference
   ·
18 │     x
   │     ^ Invalid return. Local variable 'g' is still being borrowed.

error[E07004]: invalid return of locally borrowed state
   ┌─ tests/move_2024/borrows/borrow_edge_overflow_tmp.move:18:5
   │
15 │     if (test) x = &j;
   │                   -- It is still being borrowed by this reference
   ·
18 │     x
   │     ^ Invalid return. Local variable 'h' is still being borrowed.

error[E07004]: invalid return of locally borrowed state
   ┌─ tests/move_2024/borrows/borrow_edge_overflow_tmp.move:18:5
   │
15 │     if (test) x = &j;
   │                   -- It is still being borrowed by this reference
   ·
18 │     x
   │     ^ Invalid return. Local variable 'i' is still being borrowed.

error[E07004]: invalid return of locally borrowed state
   ┌─ tests/move_2024/borrows/borrow_edge_overflow_tmp.move:18:5
   │
15 │     if (test) x = &j;
   │                   -- It is still being borrowed by this reference
   ·
18 │     x
   │     ^ Invalid return. Local variable 'j' is still being borrowed.

error[E07004]: invalid return of locally borrowed state
   ┌─ tests/move_2024/borrows/borrow_edge_overflow_tmp.move:18:5
   │
15 │     if (test) x = &j;
   │                   -- It is still being borrowed by this reference
   ·
18 │     x
   │     ^ Invalid return. Local variable 'k' is still being borrowed.

error[E07004]: invalid return of locally borrowed state
   ┌─ tests/move_2024/borrows/borrow_edge_overflow_tmp.move:18:5
   │
15 │     if (test) x = &j;
   │                   -- It is still being borrowed by this reference
   ·
18 │     x
   │     ^ Invalid return. Local variable 'test' is still being borrowed.

error[E07004]: invalid return of locally borrowed state
   ┌─ tests/move_2024/borrows/borrow_edge_overflow_tmp.move:18:5
   │
15 │     if (test) x = &j;
   │                   -- It is still being borrowed by this reference
   ·
18 │     x
   │     ^ Invalid return. Local variable 'x' is still being borrowed.
